# vertrag

./: .gitignore  Cargo.toml  Justfile  README.md  biome.json  bun.lockb  package.json
app/: .cta.json  .gitignore  biome.json  package.json  tsconfig.json  vite.config.js
app/src/: styles.css
app/src/lib/: client.ts
app/src/routes/: __root.tsx  index.tsx
backend/server/: Cargo.toml
backend/server/src/: api.rs  main.rs
contract/: biome.json  openapi.json  package.json
contract/scripts/: gen.ts
contract/src/routes/: products.ts  root.ts
playground/contract/: biome.json  openapi.json  package.json
playground/contract/scripts/: gen.ts
playground/contract/src/routes/: products.ts
playground/frontend/: biome.json  bun.lockb  package.json  tsconfig.json
playground/frontend/src/: main.tsx
playground/frontend/src/routes/: __root.tsx  index.tsx
playground/python-fastapi/: .openapi-generator-ignore  pyproject.toml
playground/python-fastapi/.openapi-generator/: FILES
playground/python-fastapi/src/: main.py
playground/python-fastapi/src/openapi/: main.py  security_api.py
playground/python-fastapi/src/openapi/apis/: product_api.py  product_api_base.py
playground/python-fastapi/src/openapi/models/: products_create200_response.py  products_create_request.py  products_list200_response.py  products_list200_response_products_inner.py
playground/python-fastapi/src/openapi_server/impl/: products.py
playground/python-fastapi/tests/: conftest.py  test_product_api.py
playground/rust-axum/server/: Cargo.toml
playground/rust-axum/server/src/: api.rs
