[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.3", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
openapi = { path = "../gen", features = ["server"] }
tower-http = { version = "0.5", features = ["cors"] }
